NXP-25835: cleanup / format